Properly close conversations before delegating them to ktp-text-ui

Helps to make a more coherent behavior upon the detaching feature.

Reviewed by David Edmundson (reviewboard is not working properly... :/)

BUG: 302602
BUG: 308130